# technical-test-dev-back-end-python-fast-api

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
app/: main.py
app/api/v1/: tickets_controller.py
app/core/: config.py
app/db/: tickets_schema.py
app/models/: tickets_models.py
app/services/: tickets_service.py
integration/api/v1/: conftest.py  test_integration_ticket.py
tests/api/v1/: conftest.py  test_ticket.py
